# develop_val_from_gherkin

./: .gitignore  README.md  pyproject.toml
src/valuation_tool/: __init__.py  cli.py  config.py  database.py  models.py
src/valuation_tool/services/: airtable.py  change_detection.py  firecrawl.py  leadership.py  news_monitoring.py  retry.py  significance.py  snapshot.py  social_discovery.py
tests/: test_change_detection.py  test_config.py  test_database.py  test_leadership.py  test_models.py  test_retry.py  test_significance.py  test_social_discovery.py
